# DeathcardServer

./: Cargo.toml  card.json  sqlx-data.json
migrations/: 20220224052302_deathcards_create.sql
src/: main.rs
