[package]
name = "deathcard_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
once_cell = "1.9.0"
rand = "0.8.5"
serde = "1.0.136"
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "postgres", "macros", "offline"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "parking_lot"] }
warp = { version = "0.3.2", default-features = false }

[profile.release]
strip = "symbols"
lto = true
